<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundd"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#057509"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/safety"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/human_safety"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/contact_no"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="ENTER PHONE NUMBER"
            android:inputType="phone"
            android:textColorHint="@color/White"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/btndes"
            android:text="@string/add"
            android:textColor="@color/White"
            android:textSize="20dp" />

        <com.skydoves.elasticviews.ElasticButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="@drawable/btndes"
            android:textColor="@color/White"
            android:layout_marginStart="10dp"
            android:text="@string/delete"/>



    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/delete_info"
            android:gravity="center"
            android:textSize="15sp"
            android:background="@drawable/btndes"
            android:layout_marginTop="30dp"
            android:textColor="#fff"/>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="#006400" />
       <Button
           android:id="@+id/view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/btndes"
           android:text="@string/view"
           android:textSize="20dp"
           android:textColor="@color/White"/>

        <View
            android:layout_width="320dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="#006400" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/White"/>


    </LinearLayout>

</RelativeLayout>