<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instructions"
    android:background="@drawable/backgroundd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#057509"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/safety"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/human_safety"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Instructions"
            android:textSize="50dp"
           android:background="@drawable/btndes"
            android:gravity="center"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"/>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ins1"
                android:textSize="20dp"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:background="@drawable/btndes"/>
            <TextView
                android:id="@+id/info_text"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ins2"
                android:textSize="30dp"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>