<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundd"
    tools:context=".Sos">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#057509">



        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/human_safety"
            android:layout_marginLeft="40dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/White"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips1"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:background="@drawable/btndes"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:videoId="Wei_x4hz6iw"
                app:autoPlay="true"
                app:showFullScreenButton="false" />
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="25dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <TextView
                android:id="@+id/info_text"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tips2"
                android:textSize="30dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"/>

</ScrollView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/contact"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/slide_bg"
                    android:clickable="true"
                    android:padding="10dp"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:text="Call  Family"
                    android:textColor="@color/White"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/call"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="120dp"
                    android:background="@drawable/slide_bg"
                    android:clickable="true"
                    android:padding="10dp"
                    android:src="@drawable/call" />

                <TextView
                    android:id="@+id/textcall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="10dp"
                    android:text="Contact"
                    android:textAlignment="center"
                    android:textColor="@color/White"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:visibility="invisible"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/message"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/slide_bg"
                    android:clickable="true"
                    android:padding="10dp"
                    android:src="@drawable/chat" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:text="Message"
                    android:textColor="@color/White"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="120dp"
                    android:background="@drawable/slide_bg"
                    android:clickable="true"
                    android:padding="10dp"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="10dp"
                    android:text="Near Police Station"
                    android:textColor="@color/White"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>